2.71.6 no longer reading user ui panel arrangement from earlier saved blend files. #41704

Closed
opened 2014-09-03 23:55:44 +02:00 by ratty redemption · 11 comments
- Operating System, Graphics card ---

cpu: intel core i3 2350 2.3 ghz
ram: 4 gb
gfx: intel hd graphics 3000
os: windows 7 home premium sp 1

- Blender version with error, and version that worked ---

error found in: 35bc266 win64.
was working in: e2c412f win64.

- Short description of error ---

2.71.6 no longer reading user ui panel arrangement from earlier saved blend files.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

[apparently happens with all blend files saved with 2.71.5 or earlier]

i know it's subjective, but this is in my opinion the most annoying glitch/bug/feature i've seen in several years, in any program i use on a regular basis.

is it going to be left like this?

ie for those of us that like working with custom screens, and i personally use 42 of them in my main project, we now have to rearrange them to our preference again and save them in 2.71.6?

why can't the latest builds just read the ui panel arrangement as has been done for years previously?

sorry for the rant guys, but i'm really not happy with this one.

- Operating System, Graphics card --- cpu: intel core i3 2350 2.3 ghz ram: 4 gb gfx: intel hd graphics 3000 os: windows 7 home premium sp 1 - Blender version with error, and version that worked --- error found in: 35bc266 win64. was working in: e2c412f win64. - Short description of error --- 2.71.6 no longer reading user ui panel arrangement from earlier saved blend files. - Steps for others to reproduce the error (preferably based on attached .blend file) --- [apparently happens with all blend files saved with 2.71.5 or earlier] i know it's subjective, but this is in my opinion the most annoying glitch/bug/feature i've seen in several years, in any program i use on a regular basis. is it going to be left like this? ie for those of us that like working with custom screens, and i personally use 42 of them in my main project, we now have to rearrange them to our preference again and save them in 2.71.6? why can't the latest builds just read the ui panel arrangement as has been done for years previously? sorry for the rant guys, but i'm really not happy with this one.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @rattyredemption

Added subscriber: @rattyredemption

Added subscriber: @mont29

Added subscriber: @mont29

Issue confirmed. No point in ranting though, issue has been reported before any official release… As a reminder, any build between official release is considered experimental and should not be used in production (or be used knowing the risks). ;)

Issue confirmed. No point in ranting though, issue has been reported before any official release… As a reminder, any build between official release is considered experimental and should not be used in production (or be used knowing the risks). ;)
Bastien Montagne self-assigned this 2014-09-04 00:46:11 +02:00

Caused by 52c06440d8, this one uncovered a nice can of worms it seems :/

Caused by 52c06440d8, this one uncovered a nice can of worms it seems :/

thanks very much, and understood mont.

nowadays i do try to remain pragmatic, but this issue really got to me yesterday, i'm calm again though today.

thanks very much, and understood mont. nowadays i do try to remain pragmatic, but this issue really got to me yesterday, i'm calm again though today.

Fix incoming… ;)

For the records, e40d8258bb was also involved in this issue.

Fix incoming… ;) For the records, e40d8258bb was also involved in this issue.

This issue was referenced by bf54ed0c7c

This issue was referenced by bf54ed0c7c097f1af3e73d07bb4bb32066f649ea

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bf54ed0c7c.

Closed by commit bf54ed0c7c.

wow, that was quick. thanks guys.

wow, that was quick. thanks guys.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41704
No description provided.